@@ -42,6 +42,7 @@ import org.apache.logging.log4j.Logger;
 
 import java.util.AbstractMap;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -62,17 +63,20 @@ public class HapiTokenTransact extends HapiTxnOp<HapiTokenTransact> {
 		private final String token;
 		private final Optional<String> sender;
 		private final Optional<String> receiver;
+		private final Optional<List<String>> receivers;
 
 		TokenMovement(
 				String token,
 				Optional<String> sender,
 				long amount,
-				Optional<String> receiver
+				Optional<String> receiver,
+				Optional<List<String>> receivers
 		) {
 			this.token = token;
 			this.sender = sender;
 			this.amount = amount;
 			this.receiver = receiver;
+			this.receivers = receivers;
 		}
 
 		public List<Map.Entry<String, Long>> generallyInvolved() {
@@ -80,9 +84,20 @@ public class HapiTokenTransact extends HapiTxnOp<HapiTokenTransact> {
 				Map.Entry<String, Long> senderEntry = new AbstractMap.SimpleEntry<>(sender.get(), -amount);
 				return receiver.isPresent()
 						? List.of(senderEntry, new AbstractMap.SimpleEntry<>(receiver.get(), -amount))
-						: List.of(senderEntry);
+						: (receivers.isPresent() ? involvedInDistribution(senderEntry) : List.of(senderEntry));
 			}
-			return List.of();
+			return Collections.emptyList();
+		}
+
+		private List<Map.Entry<String, Long>> involvedInDistribution(Map.Entry<String, Long> senderEntry) {
+			List<Map.Entry<String, Long>> all = new ArrayList<>();
+			all.add(senderEntry);
+			var targets = receivers.get();
+			var perTarget = senderEntry.getValue() / targets.size();
+			for (String target : targets) {
+				all.add(new AbstractMap.SimpleEntry<>(target, -perTarget));
+			}
+			return all;
 		}
 
 		public TokenTransferList specializedFor(HapiApiSpec spec) {
@@ -94,6 +109,12 @@ public class HapiTokenTransact extends HapiTxnOp<HapiTokenTransact> {
 			}
 			if (receiver.isPresent()) {
 				scopedTransfers.addTransfers(adjustment(receiver.get(), +amount, spec));
+			} else if (receivers.isPresent()) {
+				var targets = receivers.get();
+				var amountPerReceiver = amount / targets.size();
+				for (int i = 0, n = targets.size(); i < n; i++) {
+					scopedTransfers.addTransfers(adjustment(targets.get(i), +amountPerReceiver, spec));
+				}
 			}
 			return scopedTransfers.build();
 		}
@@ -115,15 +136,34 @@ public class HapiTokenTransact extends HapiTxnOp<HapiTokenTransact> {
 			}
 
 			public TokenMovement between(String sender, String receiver) {
-				return new TokenMovement(token, Optional.of(sender), amount, Optional.of(receiver));
+				return new TokenMovement(
+						token,
+						Optional.of(sender),
+						amount,
+						Optional.of(receiver),
+						Optional.empty());
+			}
+
+			public TokenMovement distributing(String sender, String... receivers) {
+				return new TokenMovement(
+						token,
+						Optional.of(sender),
+						amount,
+						Optional.empty(),
+						Optional.of(List.of(receivers)));
 			}
 
 			public TokenMovement from(String magician) {
-				return new TokenMovement(token, Optional.of(magician), amount, Optional.empty());
+				return new TokenMovement(
+						token,
+						Optional.of(magician),
+						amount,
+						Optional.empty(),
+						Optional.empty());
 			}
 
 			public TokenMovement empty() {
-				return new TokenMovement(token, Optional.empty(), amount, Optional.empty());
+				return new TokenMovement(token, Optional.empty(), amount, Optional.empty(), Optional.empty());
 			}
 		}
 
